Add gdImageEllipse Replace gdImageFilledEllipse by a new function (backported from the new phpgd) the new gdImageFilledEllipse fix bug bug #22103 (ellipse part)

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@115123 c90b9560-bf6c-de11-be94-00142212c4b1